--- a/cau4.html
+++ b/cau4.html
@@ -5,7 +5,7 @@
     <title>biểu diễn hình tròn</title>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<canvas id="canvas" width="500px" height="500px"></canvas>
 <script>
     function Circle(x, y, r, color) {
         this.X = x;
